# Meraqi

./: .env.example  .gitignore  STATUS.md  STEPS.md  plan.txt
backend/: pyproject.toml
backend/app/: config.py  logging_config.py  main.py  pipeline_orchestrator.py
backend/app/agents/: base.py  coa_mapper.py  contract_parser.py  qoe_reviewer.py  redflag_analyst.py
backend/app/api/v1/: databook.py  documents.py  financial.py  gl.py  ingestion.py  qoe.py  redflags.py  router.py
backend/app/pipeline/contracts/: pdf_extractor.py
backend/app/pipeline/databook/: generator.py
backend/app/pipeline/dcf_engine/: orchestrator.py
backend/app/pipeline/financial_builder/: balance_sheet.py  cash_flow.py  orchestrator.py  pnl.py
backend/app/pipeline/ingestion/: aging_loader.py  aging_normalizer.py  cross_document_validator.py  loader.py  (+6 more)
backend/app/schemas/: aging.py  contracts.py  documents.py  financials.py  gl.py  ingestion.py  projections.py  qoe.py  redflags.py
backend/app/storage/: deal_store.py  file_store.py
backend/tests/fixtures/: ABC_Subsidiary.xlsx  generate_abc_xlsx.py  generate_data_room_zip.py  generate_edge_case.py  generate_fixtures.py  sample_ap_aging.csv  sample_ar_aging.csv  sample_gl.csv  sample_projections.csv  synthetic_edge_case.csv  unbalanced_trial_balance.csv
backend/tests/test_api/: test_financials.py  test_ingestion.py  test_middleware.py  test_qoe_redflags.py
backend/tests/test_pipeline/: test_databook.py  test_e2e_edge_cases.py  test_financial_builder.py  test_ingestion.py  test_multi_document_ingestion.py  test_qoe_and_redflags.py
(+72 files in other folders)
