[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fdd-engine"
version = "0.1.0"
description = "Financial Due Diligence Engine — automated M&A TAS workflows"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # Data processing — all financial math lives here
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "openpyxl>=3.1.0",

    # Schema validation
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",

    # AI agents
    "anthropic>=0.25.0",

    # PDF extraction
    "pdfplumber>=0.11.0",
    "pymupdf>=1.24.0",

    # Utilities
    "python-dateutil>=2.9.0",
    "chardet>=5.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",    # TestClient for FastAPI
    "ruff>=0.6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
